--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cf-llama",
+  "name": "workers-ai-showcase",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,10 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
     "typescript": "^5.0.4",
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.22.1"
   },
   "dependencies": {
-    "@cloudflare/ai": "^1.0.28"
+    "@cloudflare/ai": "^1.0.33",
+    "@types/node": "^20.10.5"
   }
 }
