--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "workers-ai-showcase"
 main = "src/index.ts"
 compatibility_date = "2023-10-30"
+compatibility_flags = [ "nodejs_compat" ]
 
 [ai]
 binding = "AI"
